docs: change for new solutions.
- modify index with URL for each solution.
- Fix some typing errors.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
 
+## Private  ##
+CodeJam_IO_Women2019/
+kickStart/2019_kickStartAlarm.py
+kickStart/test.py
+kickStart/2018H_BigButtons.py
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
